# PyForged

./: LICENSE.md  README.md  play.py  pyproject.toml  requirements.txt  setup.py
forged/: __futures__.py  __init__.py  furnace.py
forged/_native/ecosystem/: forest.py  native.json
forged/_old/: blacksmith.py  build.py  metaspaces.py  namespaces.py  services.py
forged/_old/ecosystem/: bases.py  forest.py
forged/_old/engine/: deployment.py  ignition.py
forged/_old/utilities/: assorted.py  locking.py  text.py
forged/commons/patterns/: execution.py  mixins.py  state.py  undefined.py
forged/events/: dispatcher.py  filters.py  middleware.py  observer.py
forged/namespacing/: __init__.py  tree.py
forged/namespacing/access/: acl.py  context_guard.py  policy.py
forged/namespacing/core/: decorators.py  namespace.py  node.py  resolver.py  symbol.py  utils.py
forged/namespacing/registry/: composable.py  context.py
pyforged/: __bases__.py  __errors__.py  __futures__.py  __init__.py  __models__.py  build.py  metaspaces.py  namespaces.py  services.py
pyforged/commons/patterns/: mixins.py  undefined.py
pyforged/ecosystem/: bases.py  forest.py  native.json
pyforged/engine/: cargo.py  deployment.py  parts.py  services.py
pyforged/utilities/: assorted.py  files.py  locking.py  misc.py  secrets.py  structures.py  text.py
pyforged/utilities/tasking/: queues.py
tests/: test_commons_mixins.py  test_metaspaces.py  test_namespacing.py  test_service_registry.py
