[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforged"
version = "0.2.0"
description = "A PyForged Ecosytem Project for adaptability, modular and extendable."
authors = [{name = "DirtyWork Solutions Limited", email = "runecaller@open.dirtywork.solutions"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "pyutils"
]

[project.urls]
Homepage = "https://open.dirtywork.solutions/runecaller"
Documentation = "https://open.dirtywork.solutions/runecaller/docs"
Source = "https://github.com/DirtyWork-Solutions/PyExtend"
Issues = "https://github.com/DirtyWork-Solutions/PyExtend/tree/main/.github/ISSUE_TEMPLATE"
