[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforged"
version = "0.2.0"
description = "A PyForged Ecosytem Project for adaptability, modular and extendable."
authors = [{name = "DirtyWork Solutions Limited", email = "runecaller@open.dirtywork.solutions"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "pyutils"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforged"
version = "0.2.0"
description = "A PyForged Ecosytem Project for adaptability, modular and extendable."
authors = [{name = "DirtyWork Solutions Limited", email = "runecaller@open.dirtywork.solutions"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "antlr4-python3-runtime~=4.9.3"
]

[project.optional-dependencies]
suite = [
    "bedrocked~=0.1.0",
    "runecaller~=0.1.0",
    "wardkeeper~=0.1.0"
]

[project.urls]
Homepage = "https://open.dirtywork.solutions/runecaller"
Documentation = "https://github.com/DirtyWork-Solutions/RuneCaller/docs/CONTENTS.md"
Source = "https://github.com/DirtyWork-Solutions/RuneCaller"
Issues = "https://github.com/DirtyWork-Solutions/RuneCaller/tree/main/.github/ISSUE_TEMPLATE"
